# RoboBench

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: benchmark.example.yaml
docs/: PROMPTS_AND_PIPELINE.md
src/robobench/: __init__.py  cli.py  config.py
src/robobench/analysis/: __init__.py  correlation.py  dataset_stats.py
src/robobench/data/: __init__.py  dataset.py
src/robobench/evaluation/: __init__.py  base.py  iou.py  multi_choice.py  planning.py  point.py  trajectory.py
src/robobench/generation/: __init__.py  nodes.py
src/robobench/inference/: __init__.py  checkpoint.py  client.py  image.py  local_hf_client.py
src/robobench/pipeline/: __init__.py  context.py  executor.py  node.py
src/robobench/prompts/: __init__.py  builder.py
src/robobench/prompts/robot_types/: dual_arm.py  explicit_to_implicit.py  language_to_function.py  mobile_manipulation.py  single_arm.py
src/robobench/prompts/templates/: planning.py
src/robobench/scoring/: __init__.py  aggregator.py
src/robobench/utils/: __init__.py  paths.py
